# learning-docs

./: README.md  replit.nix
24csapplabs/: bomb296.tar  target297.tar
24csapplabs/bomb296/: .gdbinit  CMakeLists.txt  README  bomb  bomb.asm  bomb.c  phase3helper  phase4helper  secretPhaseHelper  solution.txt
24csapplabs/bomb296/src/: func4.c  phase5.c
24csapplabs/lab01/01optimize/: optimize  optimize.c  optimize.o.txt  optimize.s  optimize.txt  test.sh
24csapplabs/lab01/02time/: opt_argu_test  opt_argu_test.c  test.sh  (+7 more)
24csapplabs/target297/: cookie.txt  ct.asm  ct1.txt  ct2.d  ct2.s  ct2.txt  ct2temp.hex  ct3.d  ct3.hex  ct3.s  ct3.txt  ctarget  farm.asm  farm.c  hex2raw  rt.asm  rt1.hex  rt1.txt  rt2.hex  rt2.txt  rtarget
24fallDS/homework01/: 0912 第一次作业.docx  0912FirstAssignmentRequirement.txt  original_job1_code.cpp  report.txt  terminal_outputs.txt
24fallDS/homework02/: report.txt
24fallDS/homework06/: 1031 第六次作业.docx  BinTree.cpp  BinTree.h  CMakeLists.txt
24fallDS/homework06/include/: BinTree.h
24fallDS/homework06/logfile/: q3result.txt  q4.1result.txt  q4.2result.txt  q5result.txt
24fallDS/homework06/src/: BinTree.cpp  BinTreeDemo.cpp  nearestAncestor.cpp  root2leaf.cpp  rpn2infix.cpp
24fallDS/homework07/: 1107 第七次作业.docx
algorithms/closures_of_relations/: closures_generator  closures_generator.c
algorithms/combinatorics/: assignment1.7.py
algorithms/ptest/: square_sym.py  square_sym.txt
algorithms/substring search/: CMakeLists.txt  bruteForce.c  bruteForce.h  kmp.c  kmp.h  main.c  notes
ucb-cs61c-su24/discussions/: builder.py
(+86 files in other folders)
